--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -32,6 +32,7 @@
         </div>
 
         <div id="main">
+            <div class="error"><%= TempData["Message"]%></div>
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
 
             <div id="footer">
