--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -25,7 +25,7 @@
             
                 <ul id="menu">              
                     <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li><%= Html.ActionLink("About", "About", "Home")%></li>
+                    <li><%= Html.ActionLink("Schedule", "Index", "Schedule")%></li>
                 </ul>
             
             </div>
