updated resx to be more descriptive in comments
updated edit to support adding speakers

NOTE: when creating the edit data, there is essentially an inefficient implementation of Except (a linq method). It's inefficient since it aggressively gets everything into a list first. It is there because Except will infinitely loop since it _will not_ use any defined comparitors. Just use it unless you can find a better method that actually works

--- a/Conferenceware/Content/Site.css
+++ b/Conferenceware/Content/Site.css
@@ -5,6 +5,11 @@ body
 	background: url("./img/top.gif") repeat-x scroll center top #F0F7ED;
 }
 
+.display-label
+{
+    font-weight: bold;
+}
+
 #navigation 
 {
 	width: 814px;
