crud works for companies. the only way to add company people, invoices, and payments will be from the company details view (almost set up; i think there's a bug there right now)

--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -30,6 +30,8 @@
                         <li><%= Html.ActionLink("Attendees", "Index", "Attendee") %></li>                      
                         <li>|</li>
                         <li><%= Html.ActionLink("Settings", "Index", "Settings")%></li>
+                        <li>|</li>
+                        <li><%= Html.ActionLink("Companies", "Index", "Company")%></li>
                 </ul>
             </div>
             
