debugged mechmania registration
fixes #74

--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -32,6 +32,8 @@
                         <li><%= Html.ActionLink("Settings", "Index", "Settings")%></li>
                         <li>|</li>
                         <li><%= Html.ActionLink("Companies", "Index", "Company")%></li>
+                        <li>|</li>
+                        <li><%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
                 </ul>
             </div>
             
