users can now register. it's pretty awesome fixes #64 fixes #33

--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -34,6 +34,8 @@
                         <li><%= Html.ActionLink("Companies", "Index", "Company")%></li>
                         <li>|</li>
                         <li><%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
+                        <li>|</li>
+                        <li><%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
                 </ul>
             </div>
             
