added link to volunteer admin page
added files and tested for public volunteer registration

updated master to have link to volunteer registration

fixes #104

--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -36,6 +36,8 @@
                         <li><%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
                         <li>|</li>
                         <li><%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
+                        <li>|</li>
+                        <li><%= Html.ActionLink("Volunteer Registration", "Index", "VolunteerRegistration")%></li>
                 </ul>
             </div>
             
