--- a/Conferenceware/Content/Site.css
+++ b/Conferenceware/Content/Site.css
@@ -15,6 +15,12 @@ body
     display: inline;
 }
 
+.badge-background-image
+{
+    width: 3in;
+    height: 4in;
+}
+
 #navigation 
 {
 	width: 814px;
