--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -3,60 +3,76 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+    <title>
+        <asp:ContentPlaceHolder ID="TitleContent" runat="server" />
+    </title>
     <meta name="keywords" content="UIUC, Reflections, Projections, conference, ACM">
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+
     <script src="/Scripts/MicrosoftAjax.js" type="text/javascript"></script>
+
     <script src="/Scripts/MicrosoftMvcValidation.js" type="text/javascript"></script>
+
     <script src="/Scripts/jquery-1.3.2.min.js" type="text/javascript"></script>
+
     <script src="/Scripts/jquery-ui-1.7.2.custom.min.js" type="text/javascript"></script>
+
     <asp:ContentPlaceHolder ID="ExtraHeadContent" runat="server" />
 </head>
-
 <body>
     <div class="page">
-
-        <div id="header">              
-            <div id="navigation">
-            <!-- TODO: make menu smart. add items for logged in users -->
-                <ul id="menu">
-                        <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Admin", "Admin", "Home")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Schedule", "Index", "Schedule") %></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Speakers", "Index", "Speaker") %></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Events", "Index", "Event") %></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Attendees", "Index", "Attendee") %></li>                      
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Settings", "Index", "Settings")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Companies", "Index", "Company")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
-                        <li>|</li>
-                        <li><%= Html.ActionLink("Volunteer Registration", "Index", "VolunteerRegistration")%></li>
-                </ul>
+        <div id="header">
+            <div id="logo">
+                <a href="/"></a>
             </div>
-            
-            <div id="logo"><a href="/"></a></div>
-            
             <div id="logindisplay">
                 <% Html.RenderPartial("LogOnUserControl"); %>
             </div>
+            <div id="navigation">
+                <!-- TODO: make menu smart. add items for logged in users -->
+                <ul id="menu">
+                    <li>
+                        <%= Html.ActionLink("Home", "Index", "Home")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Admin", "Admin", "Home")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Schedule", "Index", "Schedule") %></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Speakers", "Index", "Speaker") %></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Events", "Index", "Event") %></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Attendees", "Index", "Attendee") %></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Settings", "Index", "Settings")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Companies", "Index", "Company")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
+                    <li>|</li>
+                    <li>
+                        <%= Html.ActionLink("Volunteer Registration", "Index", "VolunteerRegistration")%></li>
+                </ul>
+            </div>
         </div>
-
         <div id="main">
-            <div class="error"><%= TempData["Message"]%></div>
+            <div class="error">
+                <%= TempData["Message"]%></div>
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
-
             <div id="footer">
-                15th Annual Reflections | Projections Student Computing Conference October 16-18, 2009
+                15th Annual Reflections | Projections Student Computing Conference October 16-18,
+                2009
             </div>
         </div>
     </div>
