--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -16,6 +16,8 @@
     <script src="/Scripts/jquery-1.3.2.min.js" type="text/javascript"></script>
 
     <script src="/Scripts/jquery-ui-1.7.2.custom.min.js" type="text/javascript"></script>
+    
+    <script src="/Scripts/site-global.js" type="text/javascript"></script>
 
     <asp:ContentPlaceHolder ID="ExtraHeadContent" runat="server" />
 </head>
@@ -32,39 +34,30 @@
                 <!-- TODO: make menu smart. add items for logged in users -->
                 <ul id="menu">
                     <li>
-                        <%= Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li>|</li>
-                    <li>
-                        <%= Html.ActionLink("Admin", "Admin", "Home")%></li>
-                    <li>|</li>
-                    <li>
                         <%= Html.ActionLink("Schedule", "Index", "Schedule") %></li>
-                    <li>|</li>
                     <li>
                         <%= Html.ActionLink("Speakers", "Index", "Speaker") %></li>
-                    <li>|</li>
                     <li>
                         <%= Html.ActionLink("Events", "Index", "Event") %></li>
-                    <li>|</li>
-                    <!--
                     <li>
                         <%= Html.ActionLink("Attendees", "Index", "Attendee") %></li>
-                    <li>|</li>
-                    <li>
-                        <%= Html.ActionLink("Settings", "Index", "Settings")%></li>
-                    <li>|</li>
                     <li>
                         <%= Html.ActionLink("Companies", "Index", "Company")%></li>
-                    <li>|</li>
+                    <li><a href="#">Register</a>
+                        <ul class="submenu">
+                            <li>
+                                <%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
+                            <li>
+                                <%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
+                            <li>
+                                <%= Html.ActionLink("Volunteer Registration", "Index", "VolunteerRegistration")%></li>
+                        </ul>
+                    </li>
+                    <% if (Request.IsAuthenticated)
+                       { %>
                     <li>
-                        <%= Html.ActionLink("Mechmania Registration", "Index", "MechmaniaRegistration")%></li>
-                    <li>|</li>
-                    <li>
-                        <%= Html.ActionLink("Attendee Registration", "Index", "AttendeeRegistration")%></li>
-                    <li>|</li>
-                    <li>
-                        <%= Html.ActionLink("Volunteer Registration", "Index", "VolunteerRegistration")%></li>
-                        -->
+                        <%= Html.ActionLink("Admin", "Admin", "Home")%></li>
+                    <% } %>
                 </ul>
             </div>
         </div>
@@ -74,7 +67,7 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
         </div>
         <div id="footer">
-            16th annual conference hosted by the ACM Student Chapter  at the University of Illinois
+            16th annual conference hosted by the ACM Student Chapter at the University of Illinois
         </div>
     </div>
 </body>
