--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -6,18 +6,19 @@
     <title>
         <asp:ContentPlaceHolder ID="TitleContent" runat="server" />
     </title>
-    <meta name="keywords" content="UIUC, Reflections, Projections, conference, ACM">
-    <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <meta name="keywords" content="UIUC, Reflections, Projections, conference, ACM" />
+    <link href="<%= Url.Content("~/Content/Site.css") %>" rel="stylesheet" type="text/css" />
 
-    <script src="/Scripts/MicrosoftAjax.js" type="text/javascript"></script>
+    <script src="<%= Url.Content("~/Scripts/MicrosoftAjax.js") %>" type="text/javascript"></script>
 
-    <script src="/Scripts/MicrosoftMvcValidation.js" type="text/javascript"></script>
+    <script src="<%= Url.Encode("~/Scripts/MicrosoftMvcValidation.js") %>" type="text/javascript"></script>
 
-    <script src="/Scripts/jquery-1.3.2.min.js" type="text/javascript"></script>
+    <script src="<%= Url.Content("~/Scripts/jquery-1.3.2.min.js") %>" type="text/javascript"></script>
 
-    <script src="/Scripts/jquery-ui-1.7.2.custom.min.js" type="text/javascript"></script>
+    <script src="<%= Url.Content("~/Scripts/jquery-ui-1.7.2.custom.min.js") %>" type="text/javascript"></script>
     
-    <script src="/Scripts/site-global.js" type="text/javascript"></script>
+    <script src="<%= Url.Content("~/Scripts/site-global.js") %>" type="text/javascript"></script>
+    
 
     <asp:ContentPlaceHolder ID="ExtraHeadContent" runat="server" />
 </head>
