speaker bios available.
speakers and events link together

both check if they should display before displaying

closes #22
closes #23

--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -41,6 +41,8 @@
                 <ul id="menu">
                     <li>
                         <%=Html.ActionLink("Schedule", "Index", "Schedule")%></li>
+                    <li>
+                        <%=Html.ActionLink("Speakers", "Index", "SpeakerInfo")%></li>
                     <li><a href="#">Register</a>
                         <ul class="submenu">
                             <li>
