--- a/Conferenceware/Views/Shared/Site.Master
+++ b/Conferenceware/Views/Shared/Site.Master
@@ -11,7 +11,7 @@
 
     <script src="<%=Url.Content("~/Scripts/MicrosoftAjax.js")%>" type="text/javascript"></script>
 
-    <script src="<%=Url.Encode("~/Scripts/MicrosoftMvcValidation.js")%>" type="text/javascript"></script>
+    <script src="<%=Url.Content("~/Scripts/MicrosoftMvcValidation.js")%>" type="text/javascript"></script>
 
     <script src="<%=Url.Content("~/Scripts/jquery-1.4.2.min.js")%>" type="text/javascript"></script>
 
